--- a/PlantPal/PlantPal.csproj
+++ b/PlantPal/PlantPal.csproj
@@ -12,7 +12,10 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PlantPalLib\PlantPalLib.csproj" />
   </ItemGroup>
 
 </Project>
