--- a/.github/workflows/PlantPalWeb.yml
+++ b/.github/workflows/PlantPalWeb.yml
@@ -1,10 +1,10 @@
-name: Build and deploy .NET Core application to Web App PlantPal20230508115132
+name: Build and deploy .NET Core application to Web App PlantPalWeb
 on:
   push:
     branches:
     - master
 env:
-  AZURE_WEBAPP_NAME: PlantPal20230508115132
+  AZURE_WEBAPP_NAME: PlantPalWeb
   AZURE_WEBAPP_PACKAGE_PATH: PlantPal\publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
@@ -23,7 +23,7 @@ jobs:
     - name: Build
       run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
     - name: Test
-      run: dotnet test # "${{ env.WORKING_DIRECTORY }}" --no-build
+      run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
     - name: Publish
       run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
     - name: Publish Artifacts
@@ -44,5 +44,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.PlantPal20230508115132_8396 }}
+        publish-profile: ${{ secrets.PlantPalWeb_F8F0 }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
