Mulig løsning til Database

--- a/PlantPal/appsettings.Development.json
+++ b/PlantPal/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PlantPalDbConnection": "Server=tcp:plantpaldbserver.database.windows.net,1433;Initial Catalog=PlantPal_db;Encrypt=True;TrustServerCertificate=False;ConnectionTimeout=30;Authentication=\"Active Directory Default\";"
   }
 }
