--- a/PlantPal/appsettings.json
+++ b/PlantPal/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PlantPalDbConnection": "Server=tcp:plantpaldbserver.database.windows.net,1433;Initial Catalog=PlantPal_db;Encrypt=True;TrustServerCertificate=False;ConnectionTimeout=30;Authentication=\"Active Directory Default\";"
+  }
 }
