--- a/PlantPal/appsettings.Development.json
+++ b/PlantPal/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "PlantPalDbConnection": "Server=tcp:plantpaldbserver.database.windows.net,1433;Initial Catalog=PlantPal_db;Encrypt=True;TrustServerCertificate=False;Authentication=\"Active Directory Default\";"
+    "PlantPalDbConnection": "Server=tcp:plantpaldbserver.database.windows.net,1433;Initial Catalog=PlantPal_db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   }
 }
